# wwwe

./: CMakeLists.txt  WarnHashCheckForm.ui  creds.enc  hashcheckwarnform.cpp  hashcheckwarnform.h  hashcheckwarnform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
dbglauncher/: CMakeLists.txt  main.cpp
